--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_staggered_grid_view: ^0.7.0
   provider: ^6.1.2
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  mockito: ^5.4.4
+  mocktail: ^1.0.4
+  build_runner: ^2.4.11
+  bloc_test: ^9.1.7
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
