--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   provider: ^6.1.2
   http: ^1.2.1
+  go_router: ^14.2.0
 
 dev_dependencies:
   flutter_test:
